--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "full-stact-react-blog",
+  "name": "full-stack-react-blog",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   }
